{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 23,
  "lineage": "38a2763c-936c-8504-eded-965b6ff9e58c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:455712452757:internet-gateway/igw-031be742a3a953714",
            "id": "igw-031be742a3a953714",
            "owner_id": "455712452757",
            "tags": {
              "Name": "kojitechs-igw"
            },
            "tags_all": {
              "Name": "kojitechs-igw"
            },
            "vpc_id": "vpc-05b207ed85582eaa4"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:455712452757:loadbalancer/app/front-end-lb/15a6cc674f88f317",
            "arn_suffix": "app/front-end-lb/15a6cc674f88f317",
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-end-lb-65007753.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:455712452757:loadbalancer/app/front-end-lb/15a6cc674f88f317",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front-end-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02af68d476efc9829"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07ea9ecb6c240912b"
              },
              {
                "subnet_id": "subnet-0a32a485fdfc4cb74"
              }
            ],
            "subnets": [
              "subnet-07ea9ecb6c240912b",
              "subnet-0a32a485fdfc4cb74"
            ],
            "vpc_id": "vpc-05b207ed85582eaa4",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.app_static_sg",
            "aws_security_group.elb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:455712452757:listener/app/front-end-lb/15a6cc674f88f317/53da16d9046d652b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:455712452757:targetgroup/front-end-lb-tg/a6db560c873cc704",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:455712452757:listener/app/front-end-lb/15a6cc674f88f317/53da16d9046d652b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:455712452757:loadbalancer/app/front-end-lb/15a6cc674f88f317",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.app_static_sg",
            "aws_security_group.elb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:455712452757:targetgroup/front-end-lb-tg/a6db560c873cc704",
            "arn_suffix": "targetgroup/front-end-lb-tg/a6db560c873cc704",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:455712452757:targetgroup/front-end-lb-tg/a6db560c873cc704",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "front-end-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05b207ed85582eaa4"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:455712452757:route-table/rtb-04b669c4128a83004",
            "id": "rtb-04b669c4128a83004",
            "owner_id": "455712452757",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031be742a3a953714",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-routetable"
            },
            "tags_all": {
              "Name": "public-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b207ed85582eaa4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routetable_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059a9f0b690939068",
            "route_table_id": "rtb-04b669c4128a83004",
            "subnet_id": "subnet-07ea9ecb6c240912b"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_route_table.public_routable",
            "aws_subnet.public_subnet",
            "aws_vpc.app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2dae8c607e805b2",
            "route_table_id": "rtb-04b669c4128a83004",
            "subnet_id": "subnet-0a32a485fdfc4cb74"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_route_table.public_routable",
            "aws_subnet.public_subnet",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_static_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:455712452757:security-group/sg-09daad9cba63b55f4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09daad9cba63b55f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ingress-efs",
            "name_prefix": "",
            "owner_id": "455712452757",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05b207ed85582eaa4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:455712452757:security-group/sg-02af68d476efc9829",
            "description": "Allow access on http and https from everywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02af68d476efc9829",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09daad9cba63b55f4"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09daad9cba63b55f4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-elb",
            "name_prefix": "",
            "owner_id": "455712452757",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05b207ed85582eaa4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_static_sg",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:455712452757:subnet/subnet-07ea9ecb6c240912b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ea9ecb6c240912b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "455712452757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-05b207ed85582eaa4"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:455712452757:subnet/subnet-0a32a485fdfc4cb74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a32a485fdfc4cb74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "455712452757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-05b207ed85582eaa4"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:455712452757:vpc/vpc-05b207ed85582eaa4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098e2595a1da314c5",
            "default_route_table_id": "rtb-0b79f67754ce998fb",
            "default_security_group_id": "sg-04869582e6a866d31",
            "dhcp_options_id": "dopt-0f26f09f9bac1145c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b207ed85582eaa4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b79f67754ce998fb",
            "owner_id": "455712452757",
            "tags": {
              "Name": "kojitechs-vpc"
            },
            "tags_all": {
              "Name": "kojitechs-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}